src/Pages/Survey/Finalize.css
:root {
  --squish-animation-time: 500ms;
  --progress-animation-time: 1000ms;
  --circle-animation-time: 300ms;
  --checkmark-animation-time: 300ms;
  --btn-width: 12.5rem;
  --btn-height: 4rem;
  --circle-color: rgb(0, 255, 191);
}

.submitBtn {
  position: relative;
  background-color: rgb(70, 70, 70);
  border: none;
  color: var(--circle-color);
  height: var(--btn-height);
  width: var(--btn-width);
  border-radius: 5px;
  font-size: 1.4rem;
  /* letter-spacing: 1px; */
  cursor: pointer;
  padding: 0;
}

.submitBtn.animating {
  background-color: transparent;
  color: transparent;
  user-select: none;
  cursor: default;
  animation: hide 0ms
    calc(var(--squish-animation-time) + var(--progress-animation-time)) forwards;
}

.submitBtn::before {
  content: '';
  display: none;
  position: absolute;
  background-color: rgb(70, 70, 70);
  inset: 0;
  border-radius: 5px;
  animation: squish var(--squish-animation-time)
    cubic-bezier(0.26, 0.6, 0.46, 1.7);
  animation-fill-mode: forwards;
}

.submitBtn::after {
  content: '';
  display: none;
  position: absolute;
  background-color: rgb(175, 175, 175);
  left: 51%;
  right: 51%;
  top: 45%;
  bottom: 45%;
  border-radius: 8px;
  animation: progress var(--progress-animation-time)
    var(--squish-animation-time);
  animation-fill-mode: forwards;
}

.submitBtn.animating::before,
.submitBtn.animating::after {
  display: block;
}

.submitBtn.animating + .checkmark-container {
  background-color: rgb(70, 70, 70);
  border-radius: 5px;
  width: 0;
  height: 0;
  animation: circle var(--circle-animation-time)
    calc(var(--squish-animation-time) + var(--progress-animation-time)) forwards
    cubic-bezier(0.26, 0.6, 0.46, 1.7);
  display: flex;
  justify-content: center;
  align-items: center;
}

.submitBtn.animating + .checkmark-container .checkmark-svg {
  stroke: white;
  width: 2.5rem;
  stroke-dashoffset: 40.84104919433594;
  stroke-dasharray: 40.84104919433594;
  stroke-linecap: round;
  stroke-linejoin: round;
  stroke-width: 3px;
  animation: checkmark var(--checkmark-animation-time)
    calc(
      var(--squish-animation-time) + var(--progress-animation-time) +
        var(--circle-animation-time)
    )
    forwards;
}

.wish-submitted {
  opacity: 0;
  animation: fadeIn 1000ms
    calc(
      var(--squish-animation-time) + var(--progress-animation-time) +
        var(--circle-animation-time) + var(--checkmark-animation-time)
    )
    forwards;
  margin-bottom: 2rem;
}

.returnButton {
  border: none;
  background-color: rgb(70, 70, 70);
  width: 12rem;
  height: 3rem;
  color: white;
  border-radius: 5px;
  box-shadow: 3px 3px 7px rgb(63, 63, 63);
  font-family: gilSans;
  font-size: 1rem;
  font-weight: bold;
  margin-top: 4rem;
  opacity: 0;
  animation: fadeIn 1000ms
    calc(
      var(--squish-animation-time) + var(--progress-animation-time) +
        var(--circle-animation-time) + var(--checkmark-animation-time)
    )
    forwards;
}

.return-hidden {
  border: none;
  background-color: rgb(70, 70, 70);
  width: 12rem;
  height: 3rem;
  color: white;
  border-radius: 5px;
  box-shadow: 3px 3px 7px rgb(63, 63, 63);
  font-family: gilSans;
  font-size: 1rem;
  font-weight: bold;
  margin-top: 4rem;
  opacity: 0;
}

.wish-hidden {
  opacity: 0;
  margin-bottom: 2rem;
}

.thatsIt {
  position: absolute;
  top: 10rem;
  left: auto;
  right: auto;
}

.thatsIt-hidden {
  position: absolute;
  top: 10rem;
  left: auto;
  right: auto;
  animation: fadeOut 200ms forwards;
}

@keyframes squish {
  100% {
    left: -25%;
    right: -25%;
    top: 45%;
    bottom: 45%;
    border-radius: 8px;
  }
}

@keyframes progress {
  100% {
    left: -25%;
    right: -25%;
  }
}

@keyframes hide {
  100% {
    height: 0;
    width: 0;
  }
}

@keyframes circle {
  0% {
    width: calc(var(--btn-width) * 1.5);
    height: calc(var(--btn-height * 0.1));
  }
  100% {
    background-color: var(--circle-color);
    width: 5rem;
    height: 5rem;
    border-radius: 100%;
  }
}

@keyframes checkmark {
  100% {
    stroke-dashoffset: 0;
  }
}

@keyframes fadeIn {
  100% {
    opacity: 100%;
  }
}

@keyframes fadeOut {
  100% {
    opacity: 0%;
  }
}

